; ModuleID = '/home/carl/AnghaBench/sqlcipher/tool/extr_lemon.c_SetNew.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/tool/extr_lemon.c_SetNew.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@size = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @SetNew() #0 {
  %1 = alloca i8*, align 8
  %2 = load i32, i32* @size, align 4
  %3 = call i64 @calloc(i32 %2, i32 1)
  %4 = inttoptr i64 %3 to i8*
  store i8* %4, i8** %1, align 8
  %5 = load i8*, i8** %1, align 8
  %6 = icmp eq i8* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %0
  call void (...) @memory_error()
  br label %8

8:                                                ; preds = %7, %0
  %9 = load i8*, i8** %1, align 8
  ret i8* %9
}

declare dso_local i64 @calloc(i32, i32) #1

declare dso_local void @memory_error(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
